Fix Tabs Spacing Issue

--- a/packages/assets/css/src/scss/_components/_tabs/_tabs-elements/_build-panel-item.scss
+++ b/packages/assets/css/src/scss/_components/_tabs/_tabs-elements/_build-panel-item.scss
@@ -10,15 +10,15 @@
 ///
 /// @param {String} $block - Main block name
 @mixin build-panel-item($block) {
-    // DIR: Left to right.
-    // THEME: None.
-    @include sui-class($rtl: false, $theme: null) {
-        // Block wrapper.
-        @include block($block) {
-            @include element(panel-item) {
-                display: none;
-                //padding: $tabs-panel-spacing;
-            }
-        }
-    }
+	// DIR: Left to right.
+	// THEME: None.
+	@include sui-class($rtl: false, $theme: null) {
+		// Block wrapper.
+		@include block($block) {
+			@include element(panel-item) {
+				display: none;
+				padding: $tabs-panel-spacing;
+			}
+		}
+	}
 }
